--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -14,8 +14,8 @@ jobs:
   build:
     strategy:
       matrix:
-        go-version: [1.17, 1.18, 1.19, 1.20]
-        os: [ubuntu-lates, windows-latest, macos-latest]
+        go-version: [1.17.x, 1.18.x, 1.19.x, 1.20.x]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v3
